<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Cartão de Visitas</string>
    <string name="Add_Card">Adicionar Cartão</string>
    <string name="Close">Fechar</string>
    <string name="label_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_telephone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_company">Empresa</string>
    <string name="label_color">Cor</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_show_sucess">Cartão cadastrado com sucesso!</string>
    <string name="label_show_update_sucess">Cartão atualizado com sucesso!</string>
    <string name="label_share">Compartilhar</string>
</resources>